added getReportsByDeviceId
